# Django-Bakery

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  prompts.rs  recipe_io.rs  ui.rs
crates/engine/: Cargo.toml
crates/engine/src/: context.rs  error.rs  filters.rs  lib.rs  post_gen.rs  recipe.rs  render.rs  versions.rs
crates/engine/tests/: render.rs  snapshot.rs
crates/engine/tests/snapshots/: snapshot__snapshot_tree_defaults_recipe.snap  snapshot__snapshot_tree_minimal_recipe.snap  snapshot__snapshot_tree_nuxt_full_recipe.snap  snapshot__snapshot_tree_react_full_recipe.snap
crates/templates/: Cargo.toml
crates/templates/files/{{bakery.project_slug}}/: LICENSE.j2  README.md.j2  _dot_dockerignore  _dot_env.example.j2  _dot_gitignore  _dot_gitignore.j2  justfile.j2  pyproject.toml.j2  {% if bakery.ci != 'gitlab-ci' and bakery.ci != 'both' %}__SKIP__{% endif %}_dot_gitlab-ci.yml.j2  {% if bakery.container_setup == 'none' %}__SKIP__{% endif %}_dot_env.j2  {% if bakery.container_setup == 'none' %}__SKIP__{% endif %}compose.local.yml.j2  {% if bakery.container_setup == 'none' %}__SKIP__{% endif %}compose.production.yml.j2  {% if bakery.frontend != 'htmx-alpine' or bakery.css_framework != 'tailwind' %}__SKIP__{% endif %}package.json.j2  {% if bakery.frontend == 'none' or (bakery.frontend == 'htmx-alpine' and bakery.css_framework != 'tailwind') %}__SKIP__{% endif %}pnpm-workspace.yaml.j2  {% if not bakery.use_pre_commit %}__SKIP__{% endif %}_dot_pre-commit-config.yaml.j2
crates/templates/files/{{bakery.project_slug}}/_dot_vscode/: extensions.json  settings.json
crates/templates/files/{{bakery.project_slug}}/config/: __init__.py.j2  urls.py.j2  wsgi.py.j2
crates/templates/files/{{bakery.project_slug}}/docs/: authentication.md.j2  deployment.md.j2  development.md.j2  security.md.j2
crates/templates/files/{{bakery.project_slug}}/templates/: 400.html  404.html  base.html.j2  robots.txt.j2
crates/templates/files/{{bakery.project_slug}}/tests/: conftest.py
crates/templates/files/{{bakery.project_slug}}/{% if bakery.frontend != 'next' or bakery.is_full_template %}__SKIP__{% endif %}frontend/: README.md.j2  _dot_gitignore  eslint.config.js  package.json.j2
crates/templates/files/{{bakery.project_slug}}/{% if bakery.frontend != 'next' or bakery.is_skeleton %}__SKIP__{% endif %}frontend/: README.md.j2  _dot_env.example.j2  eslint.config.js  next.config.ts.j2  package.json.j2  playwright.config.ts.j2
crates/templates/files/{{bakery.project_slug}}/{% if bakery.frontend != 'nuxt' or bakery.is_full_template %}__SKIP__{% endif %}frontend/: README.md.j2  _dot_env.example  _dot_gitignore  app.vue.j2  nuxt.config.ts.j2  package.json.j2
crates/templates/files/{{bakery.project_slug}}/{% if bakery.frontend != 'nuxt' or bakery.is_skeleton %}__SKIP__{% endif %}frontend/: README.md.j2  _dot_env.example.j2  _dot_gitignore  app.vue  nuxt.config.ts.j2  package.json.j2  playwright.config.ts.j2  tsconfig.json
crates/templates/files/{{bakery.project_slug}}/{% if not bakery.multi_tenant %}__SKIP__{% endif %}docs/: multi-tenancy.md.j2
crates/templates/files/{{cookiecutter.project_slug}}/: LICENSE.j2  README.md.j2  _dot_editorconfig  _dot_env.example.j2  _dot_gitignore  justfile.j2  manage.py.j2  pyproject.toml.j2  {% if cookiecutter.ci != 'gitlab-ci' and cookiecutter.ci != 'both' %}__SKIP__{% endif %}_dot_gitlab-ci.yml.j2  {% if cookiecutter.container_setup == 'none' %}__SKIP__{% endif %}compose.local.yml.j2  {% if cookiecutter.container_setup == 'none' %}__SKIP__{% endif %}compose.production.yml.j2  {% if cookiecutter.frontend != 'htmx-alpine' or cookiecutter.css_framework != 'tailwind' %}__SKIP__{% endif %}package.json.j2  {% if not cookiecutter.use_pre_commit %}__SKIP__{% endif %}_dot_pre-commit-config.yaml.j2
crates/templates/src/: lib.rs
(+340 files in other folders)
