[workspace]
resolver = "3"
members = ["crates/cli", "crates/engine", "crates/templates"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Axionore/Django-Barkery"
homepage = "https://github.com/Axionore/Django-Barkery"
authors = ["Charles Sobel <charlesasobel@gmail.com>"]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
minijinja = { version = "2", features = ["loader", "json", "urlencode", "speedups"] }
include_dir = "0.7"
walkdir = "2"
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
inquire = "0.7"
console = "0.16"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
heck = "0.5"
rand = "0.9"
rand_chacha = "0.9"
duct = "0.13"
insta = { version = "1", features = ["json", "yaml", "filters"] }
tempfile = "3"
once_cell = "1"
regex = "1"
rayon = "1"
ureq = { version = "3", features = ["json", "rustls"], default-features = false }
semver = { version = "1", features = ["serde"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dist]
inherits = "release"
debug = false
